# InspectaVision

./: .gitignore  .gitmodules  CODE_AUDIT_2026-03-14.md  README.md  package.json  tsconfig.json
.github/workflows/: android-build.yml  deploy.yml
apps/android/: README.md  SSH_DEPLOYMENT.md  gradle.properties  gradlew  settings.gradle.kts  setup-android.sh
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
apps/android/app/src/main/java/com/inspectavision/: InspectaVisionApplication.kt  MainActivity.kt
apps/android/app/src/main/java/com/inspectavision/llm/: LlamaCppBridge.kt
apps/android/app/src/main/java/com/inspectavision/ui/navigation/: AppNavigation.kt  Screen.kt
apps/android/app/src/main/java/com/inspectavision/ui/screens/: AnalysisScreen.kt  FindingsListScreen.kt  HomeScreen.kt  InspectionCameraScreen.kt  ModelSelectorScreen.kt  SettingsScreen.kt
apps/android/app/src/main/java/com/inspectavision/ui/theme/: Theme.kt  Type.kt
apps/android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
apps/android/app/src/main/res/values/: strings.xml  themes.xml
apps/android/gradle/: libs.versions.toml
apps/api/: package.json
apps/api/src/: index.ts
apps/api/src/middleware/: auth.ts
apps/api/src/routes/: auth.ts  contracts.ts  crm.ts  inspections.ts
apps/api/src/utils/: auth.ts  pdf.ts
apps/mobile/: app.json  package.json
apps/mobile/src/components/: InspectionCamera.tsx
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx
apps/web/src/pages/: Dashboard.tsx  InspectionDetail.tsx  Login.tsx
